# nbu-platform

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  PROJECT.md  README.md  RESUME.md  Region Metrics Panel.html  SNAPSHOT.md  UZBEKISTAN_MACRO_2021_2025.md  convert_cyrillic_to_latin.py  fergana_map (2).html  fix_apostrophes.py  fix_step5_cyrillic.py  upload_to_r2.py
backend/: MIGRATIONS.md  (+2 more)
chatbot/main/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  questions.md  questions_user_uz_latn.md  questions_uz_latn.md
chatbot/main/alembic/: env.py
chatbot/main/alembic/versions/: 4d6923012422_semantic_views.py  770ec9ae0fcc_baseline_schema.py  b1f3c2d8a9e0_business_directory.py  c2d3e4f5g6h7_extend_status_allowlist.py  d3e4f5g6h7i8_widen_status_column.py
chatbot/main/docs/: ARCHITECTURE.md  HANDOFF.md  PROGRESS.md  SCHEMA.md  SEMANTIC_VIEWS.md
chatbot/main/tests/: conftest.py  test_answer.py  test_answer_brief.py  test_audit.py  test_branding.py  test_config.py  test_conversational_router.py  test_db_schema.py  test_eval.py  test_eval_style.py  test_eval_with_pipeline.py  test_evidence.py  test_evidence_memory_phase4.py  test_evidence_narrator.py  test_evidence_narrator_v2.py  test_evidence_planner.py  test_evidence_planner_clarify_policy.py  test_evidence_planner_no_clarify.py  test_importer.py  test_language_policy.py  test_llm_planner.py  test_memory_factory_and_eval.py  test_metric_aliases.py  test_metric_resolver.py  test_narrator.py  test_narrator_format.py  test_narrator_safety.py  test_narrator_v2.py  test_numeric_profile.py  test_pending_clarify_memory.py  test_pipeline_memory.py  test_pipeline_runtime.py  test_planner.py  test_profile.py  test_query_service.py  test_questions_uz_latn.py  test_scorer_three_way.py  test_semantic_catalog.py  test_service_router_integration.py  test_session_memory.py  (+6 more)
(+499 files in other folders)
