[project]
name = "cerr-chatbot"
version = "0.1.0"
description = "Regional analytics chatbot backend (PostgreSQL-backed, LLM-orchestrated)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Regional analytics backend" }]

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
db = [
    "SQLAlchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.13,<2",
]
query = [
    # Parse-driven SQL safety guard. sqlglot has zero runtime deps, builds an
    # AST per dialect, and is actively maintained - safer than regex parsing.
    "sqlglot>=25,<27",
]
llm = [
    # Anthropic SDK is optional. OpenAI calls use stdlib HTTPS in the current
    # adapter, so no OpenAI SDK dependency is required.
    "anthropic>=0.30,<1",
]
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]
business = [
    # Excel parsers for Phase 2A business directory import. openpyxl reads
    # .xlsx in streaming mode (read_only=True), xlrd handles the legacy .xls
    # TN_VED dictionary file.
    "openpyxl>=3.1,<4",
    "xlrd>=2.0,<3",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "TID", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
